apps/bazarr/bluey/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - image: linuxserver/bazarr:1.1.4
        imagePullPolicy: IfNotPresent
        name: bazarr
        resources:
          requests:
            memory: "512M"
            cpu: "1"
          limits:
            memory: "2G"
            cpu: "2"
        ports:
        - containerPort: 6767
          protocol: TCP
        volumeMounts:
        - mountPath: /movies
          name: movies
        - mountPath: /tv
          name: tv
        - mountPath: /config
          name: bazarr-config
      restartPolicy: Always
      volumes:
      - name: movies
        nfs:
          server: 192.168.1.35
          path: /Media/Movies
      - name: tv
        nfs:
          server: 192.168.1.35
          path: /Media/TV
      - name: bazarr-config
        persistentVolumeClaim:
          claimName: bazarr-config
