apps/bazarr/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bazarr
  name: bazarr
spec:
  ports:
  - name: web
    port: 6767
    protocol: TCP
    targetPort: 6767
  selector:
    app: bazarr
  type: ClusterIP
